<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Form</class>
 <widget class="QWidget" name="Form">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>471</width>
    <height>351</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <property name="styleSheet">
   <string notr="true">background-color: #202426;
color: rgb(111, 238, 244);
color: rgb(27, 56, 79);</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_2">
   <item>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QLabel" name="label">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="styleSheet">
          <string notr="true">background-color:qlineargradient(spread:pad,  rgba(0, 0, 0, 255), rgba(255, 255, 255, 255));
font: 20pt &quot;Impact&quot;;
color: #F2F2F2;
</string>
         </property>
         <property name="text">
          <string>produtos</string>
         </property>
        </widget>
       </item>
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
           <height>20</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
        <widget class="QPushButton" name="cadastrar_btn">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="styleSheet">
          <string notr="true">border-radius: 10px;
background-color:#8C262E;
gridline-color: rgb(85, 255, 127);
font: 8pt &quot;Impact&quot;;
color: rgb(255, 255, 255);
padding:10px;
</string>
         </property>
         <property name="text">
          <string>Cadastrar</string>
         </property>
         <property name="icon">
          <iconset>
           <normaloff>../image/icons8-adicionar-96.png</normaloff>../image/icons8-adicionar-96.png</iconset>
         </property>
         <property name="iconSize">
          <size>
           <width>35</width>
           <height>35</height>
          </size>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="listar_btn">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="styleSheet">
          <string notr="true">border-radius: 10px;
background-color: #8C262E;
gridline-color: rgb(85, 255, 127);
font: 10pt &quot;Impact&quot;;
color: rgb(255, 255, 255);
padding:10px;
</string>
         </property>
         <property name="text">
          <string>Listar</string>
         </property>
         <property name="icon">
          <iconset>
           <normaloff>../image/icons8-lista-96.png</normaloff>../image/icons8-lista-96.png</iconset>
         </property>
         <property name="iconSize">
          <size>
           <width>35</width>
           <height>35</height>
          </size>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <widget class="QStackedWidget" name="painel_produtos">
       <property name="styleSheet">
        <string notr="true"/>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
